--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -455,10 +455,40 @@
           charset="ascii">
 <include file="&ConfPath;/ascii.conf">
 <cloak method="account"
+       case="preserve"
        class=""
        invalidchar="strip"
        prefix="AFE-"
        suffix="-EFA">
+<cloak method="account-id"
+       case="preserve"
+       class=""
+       invalidchar="strip"
+       prefix="AFE-"
+       suffix="-EFA">
+<cloak method="fingerprint"
+       case="preserve"
+       class=""
+       invalidchar="strip"
+       length="64"
+       prefix="AFE-"
+       suffix="-EFA"
+       sanitize="yes">
+<cloak method="nickname"
+       case="preserve"
+       class=""
+       invalidchar="strip"
+       prefix="AFE-"
+       suffix="-EFA">
+<cloak method="username"
+       case="preserve"
+       class=""
+       invalidchar="strip"
+       prefix="AFE-"
+       suffix="-EFA"
+       sanitize="yes">
+
+
 <hostname charmap="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz.-_/0123456789">
 <autojoin channel=""
           delay="30s">
