--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -50,7 +50,7 @@
 #<bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
 #监听器,监听客户端;若使用TLS/SSL,请在.ssl.conf中修改相关配置
 <bind address=""
-      port="6667-6669"
+      port="6667,6668,6669"
       type="clients"
       defer="1s"
       free="yes">
@@ -348,7 +348,7 @@
 <module name="knock">
 #<module name="ldapauth">
 #<module name="ldapoper">
-#<module name="log_sql">
+<module name="log_sql">
 <module name="maphide">
 <module name="md5">
 <module name="messageflood">
