--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -487,7 +487,22 @@
        prefix="AFE-"
        suffix="-EFA"
        sanitize="yes">
-
+<cloak method="hmac-sha256"
+       key="gmxihdkwjsifkemciskefkdixljjsk"
+       prefix="AFE-"
+       suffix="-EFA"
+       case="lower"
+       hostparts="3"
+       pathparts="1"
+       psl="system"
+       class="">
+<cloak method="hmac-sha256-addr"
+       key="jsuudikwkkidiskkdiiifkemcissaa"
+       prefix="AFE-"
+       suffix="-EFA"
+       case="lower"
+       pathparts="1"
+       class="">
 
 <hostname charmap="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz.-_/0123456789">
 <autojoin channel=""
