--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -1,4 +1,4 @@
-#inspircd<0.1> -- UTF-8 --INSPIRCD v4
+#inspircd -- UTF-8 --INSPIRCD v4
 # 这只是一个或多或少可以使用的配置文件示例,此配置为ARKFUTURE-IRC使用
 # ARKFUTURE翻译,使用UTF-8编码
 # 添加部分说明,并完善主要功能,需要自行定制
