--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -455,19 +455,19 @@
           charset="ascii">
 <include file="&ConfPath;/ascii.conf">
 <cloak method="account"
-       case="preserve"
+       case="upper"
        class=""
        invalidchar="strip"
        prefix="AFE-"
        suffix="-EFA">
 <cloak method="account-id"
-       case="preserve"
+       case="upper"
        class=""
        invalidchar="strip"
        prefix="AFE-"
        suffix="-EFA">
 <cloak method="fingerprint"
-       case="preserve"
+       case="upper"
        class=""
        invalidchar="strip"
        length="64"
@@ -475,13 +475,13 @@
        suffix="-EFA"
        sanitize="yes">
 <cloak method="nickname"
-       case="preserve"
+       case="upper"
        class=""
        invalidchar="strip"
        prefix="AFE-"
        suffix="-EFA">
 <cloak method="username"
-       case="preserve"
+       case="upper"
        class=""
        invalidchar="strip"
        prefix="AFE-"
@@ -491,7 +491,7 @@
        key="gmxihdkwjsifkemciskefkdixljjsk"
        prefix="AFE-"
        suffix="-EFA"
-       case="lower"
+       case="upper"
        hostparts="3"
        pathparts="1"
        class="">
@@ -499,7 +499,7 @@
        key="jsuudikwkkidiskkdiiifkemcissaa"
        prefix="AFE-"
        suffix="-EFA"
-       case="lower"
+       case="upper"
        pathparts="1"
        class="">
 
