--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -487,14 +487,14 @@
        prefix="AFE-"
        suffix="-EFA"
        sanitize="yes">
-<cloak method="hmac-sha256-addr"
-       key="jsuudikwkkidiskkdiiifkemcissaa"
+<cloak method="hmac-sha256"
+       key="gmxihdkwjsifkemciskefkdixljjsk"
        prefix="AFE-"
        suffix="-EFA"
        case="upper"
+       hostparts="3"
        pathparts="1"
        class="">
-
 <hostname charmap="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz.-_/0123456789">
 <autojoin channel=""
           delay="30s">
