更新ARKFUTURE/CONF/inspircd/1.sh & conf/ascii.conf，移除ASCII码页规则，调整模块加载配置

--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -292,7 +292,7 @@
 <module name="cloak_sha256">
 <module name="cloak_static">
 <module name="cloak_user">
-<module name="codepage">
+#<module name="codepage">
 <module name="commonchans">
 <module name="conn_join">
 <module name="conn_umodes">
@@ -452,7 +452,6 @@
            denyrange="">
 <codepage name="ascii"
           charset="ascii">
-<include file="&ConfPath;/ascii.conf">
 <cloak method="account"
        case="upper"
        class=""
