更新ARKFUTURE/CONF/inspircd/inspircd.conf，修复注释错误

--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -149,7 +149,7 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#-服务器选项-#-#-#-#-#-#-#-#-#-#-#-#-#
-#<options>标签定义了常规配置选项.此标记只能定义一次.(v4更改！)
+#<options>标签定义了常规配置选项.此标记只能定义一次.
 <options cyclehostsfromuser="no"
          defaultbind="auto"
          defaultmodes="nost"
