--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -493,6 +493,13 @@
        hostparts="3"
        pathparts="1"
        class="">
+<cloak method="hmac-sha256-addr"
+       key="gmxihdkwjsifkemciskefkdixljjsk"
+       prefix="AFE-"
+       suffix="-EFA"
+       case="upper"
+       pathparts="1"
+       class="">
 <hostname charmap="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz.-_/0123456789">
 <autojoin channel=""
           delay="30s">
