--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -598,6 +598,12 @@
                backoff="2"
                maxbackoff="5m"
                writeversion="2">
+<permchannels channel="#arkfuture_studio"
+              modes="+bnti *!*@*"
+              topic="欢迎进入ARKFUTURE频道"
+              topicsetby="arkfuture"
+              topicts="956188800"
+              ts="726192000">
 <randquote file="quotes"
            prefix=""
            suffix="">
