--- a/ARKFUTURE/CONF/inspircd/conf/opers.conf
+++ b/ARKFUTURE/CONF/inspircd/conf/opers.conf
@@ -21,10 +21,10 @@
 #      swhois=如果已定义，则定义一个自定义行以添加到服务器操作员的WHOIS响应>
 
 
-#<oper name="arkfuture"
-#      password=""
-#      hash=""
-#      host="*@*"
-#      autologin="strict"
-#      type="NetAdmin"
-#      vhost="">
+<oper name="arkfuture"
+      password=""
+      hash=""
+      host="*@*"
+      autologin="strict"
+      type="NetAdmin"
+      vhost="">
