--- a/ARKFUTURE/CONF/inspircd/conf/opers.conf
+++ b/ARKFUTURE/CONF/inspircd/conf/opers.conf
@@ -22,8 +22,7 @@
 
 
 <oper name="arkfuture"
-      password=""
-      hash=""
+      password="123456"
       host="*@*"
       autologin="strict"
       type="NetAdmin"
