--- a/ARKFUTURE/CONF/inspircd/conf/opers.conf
+++ b/ARKFUTURE/CONF/inspircd/conf/opers.conf
@@ -22,7 +22,7 @@
 
 
 <oper name="arkfuture"
-      password="123456"
+      password=""
       host="*@*"
       type="NetAdmin"
       vhost="ARKFUTURE">
