--- a/ARKFUTURE/CONF/inspircd/conf/ssl.conf
+++ b/ARKFUTURE/CONF/inspircd/conf/ssl.conf
@@ -1,7 +1,17 @@
 #hssl -- UTF-8 
 <config format="xml">
-#在 OPENSSL
-## OPENSSL
+
+#启用TLS/SSL后相关的监听器,使用需解除注释
+<bind address=""
+      port="6697"
+      free="yes"
+      sslprofile="Clients"
+      type="clients">
+<bind address=""
+      port="7000"
+      free="yes"
+      sslprofile="Servers"
+      type="servers">
 <module name="ssl_openssl">
 <openssl onrehash="yes">
 <sslprofile name="Clients"
