--- a/ARKFUTURE/CONF/inspircd/conf/opers.conf
+++ b/ARKFUTURE/CONF/inspircd/conf/opers.conf
@@ -22,9 +22,7 @@
 
 
 <oper name="arkfuture"
-      password="49ba59abbe56e057"
-      nopassword="no"
-      hash="md5"
+      password="123456"
       host="*@*"
       type="NetAdmin"
       vhost="ARKFUTURE"
