--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -244,10 +244,10 @@
 <badnick nick="MemoServ" reason="为网络服务保留">
 
 #<badip>标签定义了永久Z线.此标记可以根据需要定义多次.
-#<badip ipmask="" reason="为防止攻击保留">
+<badip ipmask="255.255.255.255" reason="为防止攻击保留">
 
 #<badhost>标签定义了永久K线.此标记可以根据需要定义多次.
-#<badhost host="" reason="为防止攻击保留">
+<badhost host="*@example.com" reason="为防止攻击保留">
 
 #<maxlist>标签的定义数量的清单模式，可以建立在一个通道
 <maxlist chan="*"
