更新ARKFUTURE/CONF/inspircd/conf/opers.conf，添加arkfuture oper配置，强化服务器管理

--- a/ARKFUTURE/CONF/inspircd/conf/opers.conf
+++ b/ARKFUTURE/CONF/inspircd/conf/opers.conf
@@ -19,3 +19,6 @@
 #      modes=模式
 #      sslonly=此服务器操作员是否必须使用TLS（SSL）连接才能登录其帐户。
 #      swhois=如果已定义，则定义一个自定义行以添加到服务器操作员的WHOIS响应>
+<oper name="arkfuture" 
+    password="12345678" 
+    type="NetAdmin">
