更新ARKFUTURE/CONF/inspircd/inspircd.conf，清空管理员邮箱信息，强化隐私保护

--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -43,7 +43,7 @@
 #<admin>标签定义了服务器管理员的联系方式.此标记只能定义一次.
 <admin name="arkfuture"
        description="ARKFUTURE-IRC/WG|Nick:arkfuture"
-       email="ARKFUTURE@FOXMAIL.COM">
+       email="">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
