更新ARKFUTURE/CONF/inspircd/inspircd.conf，禁用restrictmsg模块，强化服务器管理

--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -384,7 +384,7 @@
 <module name="remove">
 <module name="repeat">
 #<module name="restrictchans">
-<module name="restrictmsg">
+#<module name="restrictmsg">
 <module name="rline">
 <module name="rmode">
 <module name="sajoin">
