更新ARKFUTURE/CONF/inspircd/frpc.toml，修正proxies配置，优化网络连接

--- a/ARKFUTURE/CONF/inspircd/frpc.toml
+++ b/ARKFUTURE/CONF/inspircd/frpc.toml
@@ -1,9 +1,9 @@
 serverAddr = "frp.freefrp.net"
-serverPort = "7000"
+serverPort = 7000
 auth.method = "token"
 auth.token = "freefrp.net"
 
-[[proxiex]]
+[[proxies]]
 name = "AIFREC"
 type = "tcp"
 localIp = "127.0.0.1"
