更新ARKFUTURE/CONF/inspircd/frpc.toml，修正proxies配置，优化网络连接

--- a/ARKFUTURE/CONF/inspircd/frpc.toml
+++ b/ARKFUTURE/CONF/inspircd/frpc.toml
@@ -6,6 +6,6 @@ auth.token = "freefrp.net"
 [[proxies]]
 name = "AIFREC"
 type = "tcp"
-localIp = "127.0.0.1"
-localPort = "6667"
-remotePort = "55555"
+localIP = "127.0.0.1"
+localPort = 6667
+remotePort = 
