更新ARKFUTURE/CONF/inspircd/inspircd.conf，修正配置目录路径，优化配置管理

--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -15,7 +15,7 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-定义-#-#-#-#-#-#-#-#-#-#-#-#-#
 # <path> 标记定义 config、data、log 和 module 目录的位置.此标签只能定义一次
-<path configdir="&dir.config"
+<path configdir="/etc/inspircd/"
       datadir="&dir.data;"
       logdir="&dir.log;"
       moduledir="&dir.module;"
