--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -14,13 +14,14 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-定义-#-#-#-#-#-#-#-#-#-#-#-#-#
-# <path> 标记定义 config、data、log 和 module 目录的位置.此标签只能定义一次
 <path configdir="/etc/inspircd/"
       datadir="&dir.data;"
       logdir="&dir.log;"
       moduledir="&dir.module;"
       runtimedir="&dir.runtime;">
 # <define> 标记允许您定义 XML 样式的实体(定义服务器变量)
+<define name="ConfPath"
+        value="&dir.config;/conf">
 <define name="TxtPath"
         value="&dir.config;/txt">
 <define name="CaPath"
