更新ARKFUTURE/CONF/inspircd/inspircd.conf，修正配置目录路径，优化配置管理

--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -14,7 +14,7 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-定义-#-#-#-#-#-#-#-#-#-#-#-#-#
-<path configdir="/etc/inspircd/"
+<path configdir="&dir.config;"
       datadir="&dir.data;"
       logdir="&dir.log;"
       moduledir="&dir.module;"
