更新ARKFUTURE/CONF/inspircd/inspircd.conf，修正日志配置，优化日志管理

--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -636,7 +636,7 @@
 <log method="file"
      type="*"
      level="normal"
-     target="&dir.log/inspircd.log"
+     target="&dir.log;/inspircd.log"
      flush="1000">
 
 
