--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -24,6 +24,8 @@
         value="&dir.config;/conf">
 <define name="TxtPath"
         value="&dir.config;/txt">
+<define name="CaPath"
+        value="&dir.config;/ca">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
