--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -1,7 +1,7 @@
 #inspircd -- UTF-8 --INSPIRCD v4
-# 这只是一个或多或少可以使用的配置文件示例,此配置为ARKFUTURE-IRC使用
-# ARKFUTURE翻译,使用UTF-8编码
-# 添加部分说明,并完善主要功能,需要自行定制
+# 这只是一个或多或少可以使用的配置文件示例 
+# 它可能需要根据您的需求进行调整
+# !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
 # 注意 ：nick为昵称,在IRC中您需要定义多个称呼(用户名和昵称)
 # 此配置文件中所有的密码均为随机生成,不作为固定密码使用
 # 配置文件基本使用标签格式化,部分标签没对齐不影响使用
