更新ARKFUTURE/CONF/inspircd/2.sh，赋予配置文件权限，优化配置管理

--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -24,8 +24,6 @@
         value="&dir.config;/conf">
 <define name="TxtPath"
         value="&dir.config;/txt">
-<define name="CaPath"
-        value="&dir.config;/ca">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -632,6 +630,8 @@
 
 ######TLS/SSL模块
 #<include file="&ConfPath;/ssl.conf">
+######SQL模块
+#<include file="&ConfPath;/sql.conf">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#LOG(日志)#-#-#-#-#-#-#-#-#-#-#-#
