--- a/ARKFUTURE/CONF/minecraft/server.properties
+++ b/ARKFUTURE/CONF/minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Thu Jul 18 12:37:41 CST 2024
+#ARKFUTURE 配置适用于 spigot
 accepts-transfers=true
 allow-flight=false
 allow-nether=true
