--- a/ARKFUTURE/CONF/minecraft/Bot.yml
+++ b/ARKFUTURE/CONF/minecraft/Bot.yml
@@ -27,7 +27,7 @@ ssl: false
 disable-diffie-hellman: false
 # Trust all SSL certs
 trust-all-certs: false
-# Enabled ciphers - To get a list of available ciphers run "/irc test sslcpihers"
+# Enabled ciphers - 要获取可用密码的列表，请运行 "/irc test sslcpihers "
 ciphers: []
 # 绑定地址
 bind: ''
@@ -51,15 +51,15 @@ sasl-password: ''
 sasl-password-file: ''
 # SASL username
 sasl-username: ''
-# command-prefix - The bot will listen for commands that start with this.
+# command-prefix - 机器人将监听以此开头的命令.
 command-prefix: '.'
-# quit-message - Message the bot will send when it quits the server
-quit-message: '&r[&5PurpleIRC&r] &rGood bye!'
-# Message delay in milliseconds (be careful when changing this)
+# quit-message - 机器人退出服务器时将发送的消息
+quit-message: '&r[&5PurpleIRC&r] &再见'
+# 消息延迟（毫秒） (be careful when changing this)
 message-delay: 1000
 # CTCP finger reply
 finger-reply: ''
-# send a raw message on connect
+# 在连接时发送原始消息
 raw-message-on-connect: false
 # the raw message
 raw-message: auth name pass
@@ -69,7 +69,7 @@ raw-message-list: []
 relay-private-chat: false
 # Log private chat messages
 log-private-chat: true
-# notify channels or users when a player uses commands
+# 当玩家使用命令时通知频道或用户
 command-notify:
   enabled: false
   # valid modes: msg, ctcp
@@ -81,7 +81,7 @@ command-notify:
     - /login
     - /register
     - /auth
-# File tailer
+# 文件整理器
 file-tailer:
     enabled: false
     file: 'server.log'
@@ -92,7 +92,7 @@ file-tailer:
     # Place slashes around a pattern to use regular expressions. 
     excludes:
         - '/\s+\[PurpleIRC\]\s+/'
-# Messaging flood control (game and IRC)
+# 信息防洪 (game and IRC)
 flood-control:
     # Enable or disable flood control
     enabled: false
@@ -102,9 +102,9 @@ flood-control:
     time-interval: 1000
     # Cooldown in milliseconds. If user is spamming then this cooldown takes effect.
     cooldown: 60000
-# Automatically part invalid channels
+# 自动分割无效通道
 part-invalid-channels: false
-# Message when leaving invalid channel
+# 离开无效频道时的消息
 part-invalid-channels-message: 'I should not be here! Bye!'
 # Insert zero width space into nicks of IRC output to prevent client pings
 zero-width-space: false
@@ -114,29 +114,29 @@ channel-auto-join-delay: 20
 # Can match either nick or hostmask
 custom-prefixes:
     - 'AFEMCBOT [AwesomePrefix]'
-    - '*!*sarah@example.com [Owner]'
+    - '*!*@* [Owner]'
 # Default if no match is found
 custom-prefix-default: '[IRC]'
 # Similar to custom-prefixe above. Search and replace first occurrence of : and replace with &r:
 replace-first-occurrences:
     - 'AFEMCBOT : &r:'
-    - '*!*sarah@example.com : &r:'
-# Action commands
+    - '*!*@* : &r:'
+# 动作命令
 action-commands:
     - /me
     - /eme
-# Bot linking
+# 机器人链接
 bot-linking-enabled: false
-# Map of remote linked bots and codes. Use /irc link and /irc linkaccept
+# 远程链接的机器人和代码地图. Use /irc link and /irc linkaccept
 bot-links:
 #    - remotebot: 249505593790847552435733176657146971496
-# rejoin if kicked from a channel
+# 如果被踢出频道，请重新加入
 join-on-kick: true
-# channels - List the channels your bot will join here
+# channels - 在此处列出您的机器人将加入的频道
 channels:
-  # Channel name must be surrounded by sing quotes to be YAML compliant.
-  # Use %2E instead of dots in the channel names.
-  # Example: minecraft%2Etest == minecraft.test
+  # 频道名称必须用引号括起来，以符合yaml标准.
+  # 使用 %2E 而不是通道名称中的点.
+  # 如: minecraft%2Etest == minecraft.test
   '#ms':
     permissions: 
       chat: 'irc.message.chat'
@@ -148,37 +148,37 @@ channels:
       part: 'irc.message.part'
       quit: 'irc.message.quit'
       topic: 'irc.message.topic'
-    # message prefix (replaces %CHANNELPREFIX%
+    # 消息前缀 (replaces %CHANNELPREFIX%
     prefix: ''
-    # worlds we listen to for this channel
+    # 我们通过这个频道收听的世界
     worlds:
     - '*'
-    # autojoin - Join the channel automatically on connect
+    # autojoin - 连接时自动加入频道
     autojoin: true
-    # modes - Channel modes to set
+    # modes - 要设置的通道模式
     modes: ''
-    # password - Channel password
+    # password - 频道密码
     password: ''
     # topic - Channel topic
-    topic: New topic
-    # topic-protect - Prevent others from changing the topic
+    topic: ARKFUTURE minecraft server channel
+    # topic-protect - 防止他人改变话题
     topic-protect: false
-    # Enable chanserve mode for topic set command (/msg chanserv topic #channel <topic>
+    # 为主题集命令启用chanserve模式 (/msg chanserv topic #channel <topic>
     topic-chanserv: false
-    # If the Shortify plugin is installed then shoten URLs sent from IRC
+    # 如果安装了shortify插件，则会删除从irc发送的url
     shortify: true
-    # Enable or disable message filtering
+    # 启用或禁用邮件筛选
     enable-filtering: false
-    # Filters. These wll be removed from IRC to game messages.
+    # Filters. 这些将从irc到游戏消息中删除.
     filter-list:
        - AFEMCBOT
-    # List of Factions tags to filter out of chat
+    # 要从聊天中过滤掉的派系标签列表
     faction-tag-filters:
        - FactionNameToFilter
     # enabled-messages - These are the message types that are either sent to the game or IRC
     # config.yml. Remove or comment the messages you don't want.
     enabled-messages:
-    # These messages are sent from game to IRC (see permissions)
+    # 这些消息从游戏发送到 IRC (see permissions)
     - console-chat
     - game-action
     - game-chat
@@ -313,7 +313,7 @@ channels:
     log-irc-to-hero-chat: false
     # ops - IRC hostname mask styled ops list
     ops:
-    - '*!*sarah@example.com'
+    - '*!*@*'
     # muted - IRC users that should not be heard in game
     muted:
     - KuShy
