--- a/ARKFUTURE/CONF/minecraft/Bot.yml
+++ b/ARKFUTURE/CONF/minecraft/Bot.yml
@@ -313,7 +313,7 @@ channels:
     log-irc-to-hero-chat: false
     # ops - IRC hostname mask styled ops list
     ops:
-    - '*!*@*'
+    - '*!arkfuture@*'
     # muted - IRC users that should not be heard in game
     muted:
     - KuShy
