--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -4,9 +4,7 @@
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
 # 注意 ：nick为昵称,在IRC中您需要定义多个称呼(用户名和昵称)
 # 此配置文件中所有的密码均为随机生成,不作为固定密码使用
-# 配置文件基本使用标签格式化,部分标签没对齐不影响使用
 #
-###我们尽可能少用 "#" 来注释说明,因为这样可以使得下面的文档变得美观 
 # 您可以在以下文档中查询详细配置来完善此配置
 # 请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
 # 以及官方的InspIRCd文档(更详细的) https://docs.inspircd.org/4/configuration
@@ -643,5 +641,14 @@
 
 
 #-#-#-#-#-#-#-#-#-#IRC Services(IRC 服务)-#-#-#-#-#-#-#-#
-
+<link name=""
+      ipaddr="127.0.0.1"
+      port="7000"
+      sendpass="123456"
+      recvpass="123456">
+<uline server="127.0.0.1" 
+       silent="yes">
+<bind address="127.0.0.1" 
+      port="7000" 
+      type="servers">
 
