--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -646,8 +646,8 @@
       port="7000"
       sendpass="123456"
       recvpass="123456">
-<uline server="127.0.0.1" 
-       silent="yes">
+<services server="127.0.0.1" 
+          silent="yes">
 <bind address="127.0.0.1" 
       port="7000" 
       type="servers">
